log
Thu Mar 17 13:26:32 HSP 2022: 
 tests:  0|6
total_score: 0/70
baeb544
Thu Mar 17 20:54:34 HSP 2022: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
f931aa6
Thu Mar 17 20:58:50 HSP 2022: 
 tests:  0|6
total_score: 0/70
ac47628
Thu Mar 17 21:00:38 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
7dfd807
Thu Mar 17 21:01:11 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
f8235e5
Thu Mar 17 21:11:05 HSP 2022: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|6
total_score: 5/70
bc59a1a
Thu Mar 17 21:23:52 HSP 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|5
total_score: 15/70
2fd5908
Thu Mar 17 21:28:40 HSP 2022: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
ee303cf
Thu Mar 17 21:29:10 HSP 2022: 
 tests:  3|5
total_score: 15/70
ba55b7f
Fri Mar 18 21:52:34 HSP 2022: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  3|5
total_score: 15/70
56c1724
Fri Mar 18 22:06:02 HSP 2022: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
f6831cd
Fri Mar 18 22:06:33 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
806ea45
Fri Mar 18 22:13:32 HSP 2022: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
ac3a0f0
Fri Mar 18 22:15:51 HSP 2022: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  3|5
total_score: 15/70
263d301
Fri Mar 18 22:47:37 HSP 2022: 
 list.c | 13 ++++++-------
 1 file changed, 6 insertions(+), 7 deletions(-)
In file included from test.c:5:0:
list.c: In function 'prevList':
list.c:61:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
1e25208
Fri Mar 18 22:51:52 HSP 2022: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function 'prevList':
list.c:60:12: error: return makes pointer from integer without a cast [-Werror=int-conversion]
     return 1;
            ^
cc1.exe: all warnings being treated as errors
Compilation failed
b9b504a
